<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/google"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.08"
            android:text="@string/google_connect"
            android:onClick="requestOAuth" />

    </LinearLayout>

    <TextView
        android:id="@+id/server_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_disclaimer"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:paddingTop="48dip"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_m"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edit_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/edit_message" >
	
	        <requestFocus />
	    </EditText>
	
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="48dip" >

		<Button
		    android:id="@+id/reg"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.08"
		    android:text="@string/reg"
		    android:onClick="registerUser" />

	</LinearLayout>

</LinearLayout>